--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -135,6 +135,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9bb4287",
+   "metadata": {},
+   "source": [
+    "Table Information For Understanding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "32e09a82",
@@ -205,26 +213,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1dc28c2f",
+   "cell_type": "markdown",
+   "id": "8f698b6d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Open and Click Counts:\n",
-      "Emails Opened: 10345\n",
-      "Links Clicked: 2119\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"\\nOpen and Click Counts:\")\n",
-    "print(\"Emails Opened:\", df['opened'].sum())\n",
-    "print(\"Links Clicked:\", df['clicked'].sum())"
+    "Open And Click Counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9658f78d",
+   "metadata": {},
+   "source": [
+    "Basic Statistics"
    ]
   },
   {
@@ -290,123 +291,6 @@
     "print(\"Email Version:\\n\", df['email_version'].value_counts())\n",
     "print(\"Weekday:\\n\", df['weekday'].value_counts())\n",
     "print(\"User Country:\\n\", df['user_country'].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b8c0860f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Open Rate: 10.35%\n",
-      "Click-Through Rate: 2.12%\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_emails = len(df)\n",
-    "open_rate = (df['opened'].sum() / total_emails) * 100\n",
-    "ctr = (df['clicked'].sum() / total_emails) * 100\n",
-    "\n",
-    "print(f\"Open Rate: {open_rate:.2f}%\")\n",
-    "print(f\"Click-Through Rate: {ctr:.2f}%\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0ab33eff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['email_id', 'email_text', 'email_version', 'hour', 'weekday',\n",
-      "       'user_country', 'user_past_purchases', 'opened', 'clicked'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.columns)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b34f5f18",
-   "metadata": {},
-   "source": [
-    "To understand whether various categorical email campaign segments significantly affect user behavior,I conducted Chi-Square tests of independence."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "02caf919",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Chi-Square Test for email_version:\n",
-      "Open Rate: p-value = 0.0000\n",
-      "CTR: p-value = 0.0000\n",
-      "Significant for Open Rate: Yes\n",
-      "Significant for CTR: Yes\n",
-      "\n",
-      "Chi-Square Test for email_text:\n",
-      "Open Rate: p-value = 0.0000\n",
-      "CTR: p-value = 0.0000\n",
-      "Significant for Open Rate: Yes\n",
-      "Significant for CTR: Yes\n",
-      "\n",
-      "Chi-Square Test for weekday:\n",
-      "Open Rate: p-value = 0.0000\n",
-      "CTR: p-value = 0.0000\n",
-      "Significant for Open Rate: Yes\n",
-      "Significant for CTR: Yes\n",
-      "\n",
-      "Chi-Square Test for user_country:\n",
-      "Open Rate: p-value = 0.0000\n",
-      "CTR: p-value = 0.0000\n",
-      "Significant for Open Rate: Yes\n",
-      "Significant for CTR: Yes\n"
-     ]
-    }
-   ],
-   "source": [
-    "from scipy.stats import chi2_contingency\n",
-    "import pandas as pd\n",
-    "# Function to perform chi-square test\n",
-    "def chi_square_test(df, segment, target):\n",
-    "    contingency_table = pd.crosstab(df[segment], df[target])\n",
-    "    chi2, p, _, _ = chi2_contingency(contingency_table)\n",
-    "    return p\n",
-    "\n",
-    "# Test significance for key segments\n",
-    "for seg in ['email_version', 'email_text', 'weekday', 'user_country']:\n",
-    "    p_open = chi_square_test(df, seg, 'opened')\n",
-    "    p_click = chi_square_test(df, seg, 'clicked')\n",
-    "    print(f\"\\nChi-Square Test for {seg}:\")\n",
-    "    print(f\"Open Rate: p-value = {p_open:.4f}\")\n",
-    "    print(f\"CTR: p-value = {p_click:.4f}\")\n",
-    "    print(f\"Significant for Open Rate: {'Yes' if p_open < 0.05 else 'No'}\")\n",
-    "    print(f\"Significant for CTR: {'Yes' if p_click < 0.05 else 'No'}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cefb7995",
-   "metadata": {},
-   "source": [
-    "All tested segments show strong statistical significance (p < 0.05) for both open rates and CTRs. This suggests that factors like the email version, text content, weekday sent, and user location have a meaningful influence."
    ]
   }
  ],
