--- a/notebooks/02_eda_and_features.ipynb
+++ b/notebooks/02_eda_and_features.ipynb
@@ -136,8 +136,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d7fad3e",
+   "metadata": {},
+   "source": [
+    "What percentage of users opened the email and what percentage clicked on the link within the email?\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e32fee87",
    "metadata": {},
    "outputs": [
@@ -982,8 +990,23 @@
     "    textinfo=\"value+percent previous\"\n",
     "))\n",
     "fig.update_layout(title=\"Email Campaign Conversion Funnel\")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "'''Calculates the percentage of emails opened out of those sent.\n",
+    "Formula: (Number of Opened Emails / Total Emails) * 100.'''\n",
+    "'''Calculates the click-through rate, the percentage of emails that resulted in a link click out of those sent.\n",
+    "Formula: (Number of Clicks / Total Emails) * 100.'''\n",
+    "'''Calculate Click-to-Open Rate (CTOR)\n",
+    "ctor = (links_clicked / emails_opened) * 100 if emails_opened > 0 else 0:\n",
+    "Calculates the percentage of opened emails that resulted in a link click.\n",
+    "Formula: (Number of Clicks / Number of Opened Emails) * 100.'''"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d7c796a",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1184,7 +1207,9 @@
    "cell_type": "markdown",
    "id": "8fefaa48",
    "metadata": {},
-   "source": []
+   "source": [
+    "User Past Purchase Vs Click Rate"
+   ]
   },
   {
    "cell_type": "code",
